[package]
name = "wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
console_error_panic_hook = "0.1.7"
local = { path = "../local" }
reqwest = "0.12.5"
rkyv = { version = "0.7.44", features = ["validation"] }
wasm-bindgen = "0.2.92"
wasm-bindgen-futures = "0.4.42"
web-sys = { version = "0.3.69", features = ["Document", "HtmlElement", "Node", "Text", "Window", "console"] }
